[gd_scene load_steps=3 format=2]

[ext_resource path="res://Root.gd" type="Script" id=1]
[ext_resource path="res://Ship.tscn" type="PackedScene" id=2]

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Ship" parent="." instance=ExtResource( 2 )]
position = Vector2( 94.183, 562.882 )

[node name="Spawner" type="Timer" parent="."]
wait_time = 0.8

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "POINTS:
"

[node name="Label2" type="Label" parent="."]
margin_left = 56.2011
margin_top = 1.62901
margin_right = 96.2011
margin_bottom = 15.629

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="Spawner" to="." method="_on_Spawner_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
